# EMITS

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
scripts/: generate_fig2_noise.py  generate_sim_figures.py  generate_zymo_figures.py  run_real_data_validation.sh  simulate_its_community.py
src/: em.rs  main.rs  output.rs  paf.rs  preset.rs  sim.rs  taxonomy.rs
