[package]
name = "emits"
version = "0.1.0"
edition = "2021"
description = "EM-based abundance estimation for fungal ITS communities from long-read sequencing"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[[bin]]
name = "emits"
path = "src/main.rs"
